@@ -22,3 +22,5 @@ branches:
   only:
     - master
     - develop
+notifications:
+  irc: "chat.freenode.net#cloudi"
