@@ -1,6 +1,15 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-08-22 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add cloudi_service:request_info_key_value_new/1
+    * Fix service requests that only provide ResponseInfo
+    * Add support for any methods to cloudi_service_http_cowboy
+    * Add proper iodata handling in ResponseInfo HTTP header values to
+      cloudi_service_http_cowboy
+    * Fix cloudi_service_map_reduce failure result
+
 2013-08-21 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix SSL bug in cloudi_service_http_cowboy
